      Mu4e address completion). See the ~mu-init~ manpage for details.

      It's not unusual for ~noreply~-type e-mail addresses to be the majority in
      an e-mail corpus, so it useful to get rid of those, with
      '=--ignored-address=/.*noreply*/'=

    - what used to be the ~mu fields~ command has been merged into ~mu info~; i.e.,
      ~mu fields~ is now ~mu info fields~.

    - experimental: if you build ~mu~ with [[https://github.com/CLD2Owners/cld2][CLD2]] support (available in many Linux
      distros), ~mu~ will try to detect the language of the body of e-mail
      messages; you can then search by their ISO-639-1 code, e.g. ~mu find
      lang:en~

*** mu4e

    - improved support for dealing with attachments and other MIME-parts in the
      message view; they gained completions support with annotations in the
      minibuffer

      It is possible to save all attachments at once =C-c C-a=, except with Helm,
      which uses its own mechanism for this. This same has been extended to the
      MIME-part actions.

    - experimental: support folding message threads (with =TAB= / =S-TAB=). See the
      [[info:mu4e:Folding threads][entry in the Mu4e manual]] for further details.

    - mailing list support was modernized a bit; the format changed (see the
      ~mu4e-mailing-lists~ and ~mu4e-user-mailing-lists~ docstrings. There is
      ~M-x mu4e-mailing-list-info-refresh~ to update to the new values after
      changing them.

    - also, there are now actions ('a' in view/header) to get to online archives
      for some (selected) mailing-list archives.

    - In the main-view, by default ~q~ is now bound to ~mu4e-main-quit-or-bury~,
      which calls either ~mu4e-quit~ or, with prefix argument, ~bury-buffer~.

* 1.10 (released on March 26, 2023)

*** mu

   - a new command-line parser, which allows (hopefully!) for a better user
     interaction; better error checking and more
