@@ -19,6 +19,10 @@
     - what used to be the ~mu fields~ command has been merged into ~mu info~; i.e.,
       ~mu fields~ is now ~mu info fields~.
 
+    - ~mu view~ gained ~--format=html~ for it to output the HTML body of the message
+      rather than the (default) plain-text body. See its updated manpage for
+      details.
+
     - experimental: if you build ~mu~ with [[https://github.com/CLD2Owners/cld2][CLD2]] support (available in many Linux
       distros), ~mu~ will try to detect the language of the body of e-mail
       messages; you can then search by their ISO-639-1 code, e.g. ~mu find
